display text overflow fix

--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,6 @@ body {
 
     .display {
         font-size: 3rem;
-        min-height: 105px
     }
 }
 
